--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<div class="col-lg-7">
 						<div class="banner_content">
 							<h3 class="text-uppercase">Hello</h3>
-							<h1 class="text-uppercase">I am Kunal Bagaria</h1>
+							<h1 class="text-uppercase">I am Kunal</h1>
 							<h5 class="text-uppercase">website developer</h5>
 							<div class="d-flex align-items-center">
 								<a class="primary_btn" href="contact.html"><span>Hire Me</span></a>
