--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Follow Me:</h2>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="https://twitter.com/bagaria_kunal"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="https://twitter.com/kunal2361"><span class="icon-twitter"></span></a></li>
               </ul>
             </div>
           </div>
