--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="icon" type="image/png" href="img/favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<title>Kunal Bagaria</title>
@@ -14,7 +15,7 @@
  </div>
  	<p>UI / Web Designer</p>
  	<div class="btn-div">
- 		<a href=""><button class="hire">Hire Me</button></a>
+ 		<a href="https://www.fiverr.com/kb24x7"><button class="hire">Hire Me</button></a>
  		<a href="mailto:me@kunalbagaria.com"><button class="contact">Contact</button></a>
  	</div>
  	<div class="lower">
