--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link rel="icon" type="image/png" href="img/favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 	<title>Kunal Bagaria</title>
 </head>
 <body>
