--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  </div>
  	<p>UI / Web Designer</p>
  	<div class="btn-div">
- 		<a href="https://www.fiverr.com/kb24x7"><button class="hire">Hire Me</button></a>
+ 		<a href="https://www.fiverr.com/share/GPa1Vd"><button class="hire">Hire Me</button></a>
  		<a href="mailto:me@kunalbagaria.com"><button class="contact">Contact</button></a>
  	</div>
  	<div class="lower">
