--- a/index.html
+++ b/index.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="apple-touch-icon" href="img/favicon.png">
-	<link rel="icon" type="image/png" href="img/favicon.png">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-	<title>Kunal Bagaria</title>
-</head>
-<body>
-<div class="main">
-<!-- 	<img src="img/vector.svg" style="max-width: 100%;">
- -->	<div class="box">
- 	<div class="heading">
- 	<h1>Hi, <br> I'm Kunal Bagaria</h1>
- </div>
- 	<p>UI / Web Designer</p>
- 	<div class="btn-div">
- 		<a href="https://www.fiverr.com/share/GPa1Vd"><button class="hire">Hire Me</button></a>
- 		<a href="mailto:me@kunalbagaria.com"><button class="contact">Contact</button></a>
- 	</div>
- 	<div class="lower">
- 	<a href="https://twitter.com/kb24x7"><img src="img/twitter.png" class="twitter"></a>
- 	<!-- Yup, I know that these two skills are completely unrelated, but still -->
- 	<a href="https://li.sten.to/X0eqVV5"><button class="music">My Music</button></a>
- </div>
- </div>
-</div>
-</body>
-<script type="text/javascript">
-	console.log("Portfolio coming soon! Here's a challenge if you like one: https://imgur.com/a/52zeuK7")
-</script>
+   <head>
+      <link rel="apple-touch-icon" href="img/favicon.png">
+      <link rel="icon" type="image/png" href="img/favicon.png">
+      <link rel="stylesheet" type="text/css" href="css/main.css">
+      <link rel="stylesheet" type="text/css" href="css/normalize.css">
+      <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+      <title>Kunal Bagaria</title>
+   </head>
+   <body>
+      <div class="main">
+         <!-- 	<img src="img/vector.svg" style="max-width: 100%;">
+            -->	
+         <div class="box">
+            <div class="heading">
+               <h1>Hi, <br> I'm Kunal Bagaria</h1>
+            </div>
+            <p>UI / Web Designer</p>
+            <div class="btn-div">
+               <a href="https://www.fiverr.com/share/GPa1Vd"><button class="hire">Hire Me</button></a>
+               <a href="mailto:me@kunalbagaria.com"><button class="contact">Contact</button></a>
+            </div>
+            <div class="lower">
+               <a href="https://twitter.com/kb24x7"><img src="img/twitter.png" class="twitter"></a>
+               <a href="https://dribbble.com/kb24x7"><button class="music">My work</button></a>
+               <!-- Yup, I know that these two skills are completely unrelated, but still -->
+               <a href="https://li.sten.to/X0eqVV5"><button class="music">My Music</button></a>
+            </div>
+         </div>
+      </div>
+   </body>
+   <script type="text/javascript">
+      console.log("Portfolio coming soon! Here's a challenge if you like one: https://imgur.com/a/52zeuK7")
+   </script>
 </html>
