--- a/index.html
+++ b/index.html
@@ -1,36 +1,58 @@
 <!DOCTYPE html>
-<html>
-   <head>
-      <link rel="apple-touch-icon" href="img/favicon.png">
-      <link rel="icon" type="image/png" href="img/favicon.png">
-      <link rel="stylesheet" type="text/css" href="css/main.css">
-      <link rel="stylesheet" type="text/css" href="css/normalize.css">
-      <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-      <title>Kunal Bagaria</title>
-   </head>
-   <body>
-      <div class="main">
-         <!-- 	<img src="img/vector.svg" style="max-width: 100%;">
-            -->	
-         <div class="box">
-            <div class="heading">
-               <h1>Hi, <br> I'm Kunal Bagaria</h1>
-            </div>
-            <p>UI / Web Designer</p>
-            <div class="btn-div">
-               <a href=""><button class="hire">Hire Me</button></a>
-               <a href="mailto:me@kunalbagaria.com"><button class="contact">Contact</button></a>
-            </div>
-            <div class="lower">
-               <a href="https://twitter.com/kb24x7"><img src="img/twitter.png" class="twitter"></a>
-               <a href="https://dribbble.com/kb24x7"><button class="music">My work</button></a>
-               <!-- Yup, I know that these two skills are completely unrelated, but still -->
-               <a href="https://li.sten.to/X0eqVV5"><button class="music">My Music</button></a>
-            </div>
-         </div>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Kunal Bagaria</title>
+  <meta content="" name="descriptison">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <link href="assets/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,500,500i,600,600i,700,700i,900,900i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/hover/hover.min.css" rel="stylesheet">
+  <link href="assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <!-- ======= Hero Section ======= -->
+  <div id="hero" class="home">
+
+    <div class="container">
+      <div class="hero-content">
+        <h1>I'm <span class="typed"></span></h1>
+        <p class="typed-items" data-typed-person="Kunal Bagaria">A Developer and Designer, working on Electron apps</p>
+        <p style="color: white;">My work: <a href="https://github.com/promedial/YouTube-Downloader#readme">8K YouTube Downloader</a>, <a href="https://laughnow.in">Laughnow</a>, <a href="jokegen/index.html">Programmer's Jokes</a></p>
+        <ul class="list-unstyled list-social">
+          <li><a href="https://twitter.com/kb24x7" target="_blank"><i class="ion-social-twitter"></i></a></li>
+          <li><a href="https://github.com/ProMedial" target="_blank"><i class="ion-social-github"></i></a></li>
+          <li><a href="mailto:info@kunalbagaria.com" target="_blank"><i class="ion-email"></i></a></li>
+          <li><a href="imessage://kb24x7@gmail.com" target="_blank"><i class="ion-social-apple"></i></a></li>
+        </ul>
       </div>
-   </body>
-   <script type="text/javascript">
-      console.log("Portfolio coming soon! Here's a challenge if you like one: https://imgur.com/a/52zeuK7")
-   </script>
+    </div>
+  </div><!-- End Hero -->
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/jquery/jquery.min.js"></script>
+  <script src="assets/vendor/typed/typed.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
