--- a/404.html
+++ b/404.html
@@ -1,241 +1,73 @@
-<!DOCTYPE html>
-<html>
+<!-- purple x moss 2020 -->
+
 <head>
-	<title>404 Page not found!</title>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/4b9ba14b0f.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="container">
-	
-	<div  class="error">
-		<p class="p">4</p>
-		<span class="dracula">			
-			<div class="con">
-				<div class="hair"></div>
-				<div class="hair-r"></div>
-				<div class="head"></div>
-    		<div class="eye"></div>
-    		<div class="eye eye-r"></div>
-  			<div class="mouth"></div>
-  			<div class="blod"></div>
-  			<div class="blod blod2"></div>
-			</div>
-		</span>
-		<p class="p">4</p>
-		
-		<div class="page-ms">
-			<p class="page-msg"> Oops, the page you're looking for Disappeared </p>
-			<a href="/"><button class="go-back">Go Back</button></a>
-		</div>
-</div>
-	</div>
-	<style type="text/css">
-		*{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+  <div class="mainbox">
+    <div class="err">4</div>
+    <i class="far fa-question-circle fa-spin"></i>
+    <div class="err2">4</div>
+    <div class="msg">Maybe this page moved? Got deleted? Is hiding out in quarantine? Never existed in the first place?<p>Let's go <a href="index.html">home</a> and try from there.</p></div>
+      </div>
+  <style>
+    
+body {
+  background-color: #95c2de;
 }
 
-*::before,
-*::after {
-    content: '';
-  position: absolute;
-}
-
-body{
-	background: #1B0034;
-	background-image: linear-gradient( 135deg, #1B0034 10%, #33265C 100%);
-	background-attachment: fixed;
-	background-size: cover;
-
-}
-
-.error {
-	width: 100%;
-	height: auto;
-	margin: 50px auto;
-	text-align: center;
-	margin-bottom: 0;
-}
-
-.dracula{
-	width: 230px;
-	height: 300px;
-	display: inline-block;
-	margin: auto;
-	overflowX: hidden;
-}
-
-.error .p {
-/* 	width: 10%; */
-	height: 100%;
-	color: #C0D7DD; 
-/* 	background: red; */
-	font-size: 280px;
-	margin: 50px;
-	display: inline-block;
-	font-family: 'Anton', sans-serif;
-	font-family: 'Comfortaa', cursive;
-	font-family: 'Combo', cursive;
-/* font-family: 'Coming Soon', cursive; */
-/* font-family: 'Jim Nightshade', cursive; */
-}
-
-
-
-
-
-
-.con {
-  width: 500px;
-  height: 500px;
+.mainbox {
+  background-color: #95c2de;
+  margin: auto;
+  height: 600px;
+  width: 600px;
   position: relative;
-  margin: 9% auto 0;
-animation: ani9 0.7s ease-in-out infinite  alternate ;}
-
-@keyframes ani9 {
-    0%{
-    transform: translateY(10px);	
-  }
-  
-  100%{
-    transform: translateY(30px);	
-  }
-
 }
 
+  .err {
+    color: #ffffff;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 11rem;
+    position:absolute;
+    left: 20%;
+    top: 8%;
+  }
 
-.con > * {
+.far {
   position: absolute;
-  top: 0; left: 0;
+  font-size: 8.5rem;
+  left: 42%;
+  top: 15%;
+  color: #ffffff;
 }
 
-.hair{
-  top: -20px;
-  width: 210px;
-  height: 200px;
-  background: #C0D7DD;
-  border-radius: 0 50% 0 50%;
-  transform: rotate(45deg);
-  background: #33265C;
-}
-.hair-r{
-  left: 20px;
-  width: 210px;
-  height: 200px;
-  background: #C0D7DD;
-  border-radius: 0 50% 0 50%;
-  transform: rotate(45deg);
-  background: #33265C;
+ .err2 {
+    color: #ffffff;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 11rem;
+    position:absolute;
+    left: 68%;
+    top: 8%;
+  }
 
-}
-.head {
-  width: 200px;
-  height: 200px;
-  background: #C0D7DD;
-  border-radius: 0 50% 0 50%;
-  transform: rotate(45deg);
-}
-.eye {
- width: 20px; height:20px;
-  background: #111113;
-  border-radius: 50%;
-  top: 15%; left: 11.5%;
-  transition: .3s linear;
-}
-.eye-r{left: 24%;}
+.msg {
+    text-align: center;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 1.6rem;
+    position:absolute;
+    left: 16%;
+    top: 45%;
+    width: 75%;
+  }
 
-.mouth {
-  width: 60px; 
-  height: 20px;
-  background: #840021;
-  top: 20%;
-  left: 14%;
-  border-radius: 50% / 0 0 100% 100%;
-}
-.mouth::after{
-
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-top: 13px solid #FFFFFF;
-  left: 10px;
-  
-}
-.mouth::before{
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-top: 13px solid #FFFFFF;
-  left: 40px;
+a {
+  text-decoration: none;
+  color: white;
 }
 
-.blod {
-  width: 8px;
-  height: 20px;
-  background: #840021;
-  top: 23%; left: 17%; 
-  border-radius: 20px;
+a:hover {
+  text-decoration: underline;
 }
-.blod::after{
-   width: 2px;
-  height: 10px;
-  background: #FFF;
-  top: 20%; left: 10%; 
-  border-radius: 20px;
-  
-}
-.blod2 {
-  top: 23%; left: 20%;
-  width: 13px;
-  height: 13px;
-  border-radius: 50% 50% 50% 0;
-  transform: rotate(130deg);
-  animation: blod 2s linear infinite;
-  opacity: 0;
-}
-@keyframes blod {
-  0%   {opacity: 1;}  
-  100%   {background:red; opacity: 0; top:50%;}
-  
-  
-}
-
-
-
-/* page-ms */
-.page-ms {transform: translateY(-50px);}
-
-.error p.page-msg {
-	text-align: center;
-	color: #C0D7DD; 
-	font-size: 30px;
-	font-family: 'Combo', cursive;
-	margin-bottom: 20px;
-}
-button.go-back {
-		font-size: 30px;
-    font-family: 'Combo', cursive;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    transition: 0.3s linear;
-    z-index: 9;
-    border-radius: 10px;
-    background: #C0D7DD;
-    color: #33265C;
-    box-shadow: 0 0 10px 0 #C0D7DD;
-	margin-top: 20px;
-}
-button:hover {box-shadow: 0 0 20px 0 #C0D7DD;}
-
-audio {
-/* 	display: none; */
-}
-	</style>
-</body>
-</html>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-9583677717540636",
-    enable_page_level_ads: true
-  });
-</script>
+  </style>
+    
