--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Kunal Bagaria</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <meta content="A Developer and Designer, working on Electron apps" name="description">
+  <meta content="YouTube Downloder, Kunal Bagaria, Github, Laughnow, Joke Generator" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/favicon.png" rel="icon">
