--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li><a href="mailto:info@kunalbagaria.com" target="_blank"><i class="ion-email"></i></a></li>
           <li><a href="imessage://kb24x7@gmail.com" target="_blank"><i class="ion-social-apple"></i></a></li>
         </ul>
-        <p style="margin-top: 30px;"><a href="100daysofcode/index.html">#100daysofcode</a></p>
+        <p style="margin-top: 30px;"><a href="100daysofcode/index.html">#100DaysOfCode</a></p>
       </div>
     </div>
   </div><!-- End Hero -->
