--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -9,6 +9,7 @@
         <h1>100 Days of Code</h1>
         <div class="days">
         <a href="day1/index.html"><p>Day 1 - Bill Splitter</p></a>
+        <a href="day2/index.html"><p>Day 2 - Random Doggo</p></a>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
