--- a/100daysofcode/day2/index.html
+++ b/100daysofcode/day2/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Hi, I'm a doggo!</h1>
-        <img src="/loading.png" id="image">
+        <img src="" id="image">
         <a href="../index.html"><p class="back">< Back</p></a>
         <a href="index.html"><p class="back">Refresh</p></a>
         <script src="random.js"></script>
