--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -10,6 +10,8 @@
         <div class="days">
         <a href="day1/index.html"><p>Day 1 - Bill Splitter</p></a>
         <a href="day2/index.html"><p>Day 2 - Random Doggo</p></a>
+        <a href="day3/index.html"><p>Day 3 - A challenge for you!</p></a>
+        <!-- Contact me for hints -->
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
