--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -11,6 +11,7 @@
         <a href="day1/index.html"><p>Day 1 - Bill Splitter</p></a>
         <a href="day2/index.html"><p>Day 2 - Random Doggo</p></a>
         <a href="day3/index.html"><p>Day 3 - A challenge for you!</p></a>
+        <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639"><p>Day 4 - SmortBot for Discord (Work in Progress)</p></a>
         <!-- Contact me for hints -->
         </div>
     </body>
