--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -13,6 +13,7 @@
         <a href="day3/index.html"><p>Day 3 - A challenge for you!</p></a><!-- Contact me for hints -->
         <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639"><p>Day 4 - SmortBot for Discord (Started)</p></a>
         <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639"><p>Day 5 - SmortBot for Discord (Updates and Fixes)</p></a>
+        <a href="day6"><p>Day 6 - Get today's images, from Mars!</p></a><!-- Contact me for hints -->
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
