--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -17,6 +17,7 @@
         <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639"><p>Day 7 - SmortBot for Discord (New Features)</p></a>
         <p>Day 8 - New Features and fixes for <a href="https://github.com/promedial/YouTube-Downloader/wiki">YouTube Downloader</a>. Releasing Tomorrow!</p>
         <p>Day 9 - Movie Retriever (Started) [For SmortBot and Web Based]</p>
+        <p>Day 10 - Movie Retriever (Completed for <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639">SmortBot</a>) [Web Based coming soon]</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
