--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -8,9 +8,9 @@
     <body>
         <h1>100 Days of Code</h1>
         <div class="days">
-        <a href="day1/index.html"><p>Day 1 - Bill Splitter</p></a>
-        <a href="day2/index.html"><p>Day 2 - Random Doggo</p></a>
-        <a href="day3/index.html"><p>Day 3 - A challenge for you!</p></a><!-- Contact me for hints -->
+        <a href="day1"><p>Day 1 - Bill Splitter</p></a>
+        <a href="day2"><p>Day 2 - Random Doggo</p></a>
+        <a href="day3"><p>Day 3 - A challenge for you!</p></a><!-- Contact me for hints -->
         <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639"><p>Day 4 - SmortBot for Discord (Started)</p></a>
         <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639"><p>Day 5 - SmortBot for Discord (Updates and Fixes)</p></a>
         <a href="day6"><p>Day 6 - Get today's images, from Mars!</p></a>
@@ -18,6 +18,7 @@
         <p>Day 8 - New Features and fixes for <a href="https://github.com/promedial/YouTube-Downloader/wiki">YouTube Downloader</a>. Releasing Tomorrow!</p>
         <p>Day 9 - Movie Retriever (Started) [For SmortBot and Web Based]</p>
         <p>Day 10 - Movie Retriever (Completed for <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639">SmortBot</a>) [Web Based coming soon]</p>
+        <p><a href="day11">Day 11 - Movie Retriever (Completed)</a></p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
