--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -18,7 +18,7 @@
         <p>Day 8 - New Features and fixes for <a href="https://github.com/promedial/YouTube-Downloader/wiki">YouTube Downloader</a>. Releasing Tomorrow!</p>
         <p>Day 9 - Movie Retriever (Started) [For SmortBot and Web Based]</p>
         <p>Day 10 - Movie Retriever (Completed for <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639">SmortBot</a>) [Web Based coming soon]</p>
-        <p><a href="day11">Day 11 - Movie Retriever (Completed)</a></p>
+        <a href="day11"><p>Day 11 - Movie Retriever (Completed)</p></a>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
