--- a/100daysofcode/day11/index.html
+++ b/100daysofcode/day11/index.html
@@ -33,7 +33,7 @@
     </div>
     <a href="../index.html">
         <p class="back">
-            < Back</p> </a> <script src="main.js">
+            < Back</p> </a> <script src="script.js">
                 </script>
                 <style>
                     .para {
