--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -21,6 +21,7 @@
         <a href="day11"><p>Day 11 - Movie Retriever (Completed)</p></a>
         <p>Day 12 - deskBook for macOS: Started (Releasing Tomorrow)</p>
         <a href="https://kunalbagaria.com/db"><p>Day 13 - deskBook</p></a>
+        <a href="day14"><p>Day 14 - Latest xkcd Comic Retriever (Completed)</p></a>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
