--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -23,6 +23,8 @@
         <a href="https://kunalbagaria.com/db"><p>Day 13 - deskBook</p></a>
         <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639"><p>Day 14 - Latest xkcd Comic Retriever for SmortBot (Completed)</p></a>
         <p>Day 15 - Space News (Website) [Started]</p>
+        <p>Day 16 - Space News (Website) [Work in Progress]</p>
+
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
