--- a/space/index.html
+++ b/space/index.html
@@ -6,6 +6,9 @@
 </head>
 
 <body>
+    <audio autoplay loop>
+        <source src="bg.mp3" type="audio/mpeg">
+    </audio>
     <div class="container">
         <h1>Space News</h1>
         <img src="bg.jpg" id="background">
