--- a/space/index.html
+++ b/space/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <audio autoplay loop>
+    <audio id="bg-audio" loop>
         <source src="bg.mp3" type="audio/mpeg">
     </audio>
     <div class="container">
