--- a/space/index.html
+++ b/space/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
     <title>Space News</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?1">
 
 </head>
 
 <body>
-    <img src="aud.svg" id="aud-icon" onclick="play()">
+    <img src="aud.png" id="aud-icon" onclick="play()">
     <audio id="bg-audio" loop autoplay>
         <source src="bg.mp3" type="audio/mpeg">
     </audio>
@@ -14,6 +14,6 @@
         <h1>Space News</h1>
         <img src="bg.jpg" id="background" onclick="play()">
     </div>
-    <script src="main.js"></script>
+    <script src="main.js?1"></script>
 </body>
 </html>
