--- a/space/index.html
+++ b/space/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <img src="aud.png" id="aud-icon" onclick="play()">
-    <audio id="bg-audio" loop autoplay>
+    <audio id="bg-audio" loop>
         <source src="bg.mp3" type="audio/mpeg">
     </audio>
     <div class="container">
