--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -25,6 +25,7 @@
         <p>Day 15 - Space News (Website) [Started]</p>
         <p>Day 16 - Space News (Website) [Work in Progress]</p>
         <p>Day 17 - Space News (Website) [Work in Progress]</p>
+        <p>Day 18 - [Learned] JavaScript Data Types</p> 
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
