--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -27,6 +27,7 @@
         <p>Day 17 - Space News (Website) [Work in Progress]</p>
         <p>Day 18 - [Learned] JavaScript Data Types</p> 
         <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639"><p>Day 19 - SmortBot for Discord (Major Bug Fixes and New Features)</p></a>
+        <p>Day 20 - [Learned] JavaScript String Methods</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
