--- a/space/index.html
+++ b/space/index.html
@@ -8,7 +8,7 @@
 <body>
     <img src="aud.png" id="aud-icon" onclick="play()">
     <audio id="bg-audio" loop>
-        <source src="bg.mp3" type="audio/mpeg">
+        <source src="back.mp3" type="audio/mpeg">
     </audio>
     <div class="container">
         <h1>Space News</h1>
