--- a/space/index.html
+++ b/space/index.html
@@ -5,9 +5,8 @@
 
 </head>
 
-<body>
-    <iframe src="back.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe> 
-    <audio id="bg-audio" loop autoplay>
+<body onclick="play()">
+    <audio id="bg-audio" loop>
         <source src="back.mp3" type="audio/mpeg">
     </audio>
     <div class="container">
