--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,500,500i,600,600i,700,700i,900,900i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,500,500i,600,600i,700,700i,900,900i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -36,7 +38,11 @@
       <div class="hero-content">
         <h1>I'm <span class="typed"></span></h1>
         <p class="typed-items" data-typed-person="Kunal Bagaria">A Developer and Designer, working on Electron apps</p>
-        <p style="color: white;">My work: <a href="https://github.com/promedial/YouTube-Downloader#readme" target="_blank">8K YouTube Downloader</a>, <a href="https://laughnow.in" target="_blank">Laughnow</a>, <a href="jokegen/index.html" target="_blank">Programmer's Jokes</a>, <a href="db" target="_blank">deskBook</a></p>
+        <p style="color: white;">My work: <a href="https://github.com/promedial/YouTube-Downloader#readme"
+            target="_blank">8K YouTube Downloader</a>, <a href="https://laughnow.in" target="_blank">Laughnow</a>, <a
+            href="jokegen/index.html" target="_blank">Programmer's Jokes</a>, <a href="db" target="_blank">deskBook</a>,
+          <a href="space" target="_blank">Space News</a>
+        </p>
         <ul class="list-unstyled list-social">
           <li><a href="https://twitter.com/kb24x7" target="_blank"><i class="ion-social-twitter"></i></a></li>
           <li><a href="https://github.com/ProMedial" target="_blank"><i class="ion-social-github"></i></a></li>
