--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -30,7 +30,7 @@
         <p>Day 20 - [Learned] JavaScript String Methods</p>
         <a href="https://kunalbagaria.com/space"><p>Day 21 - Space News (Completed)</p></a>
         <p>Day 22 - [Learned] JavaScript Number Methods</p>
-
+        <p>Day 23 - [Learned] JavaScript Array Sorting and Iteration</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
