--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -31,6 +31,7 @@
         <a href="https://kunalbagaria.com/space"><p>Day 21 - Space News (Completed)</p></a>
         <p>Day 22 - [Learned] JavaScript Number Methods</p>
         <p>Day 23 - [Learned] JavaScript Array Sorting and Iteration</p>
+        <p>Day 24 - [Learned] JavaScript BREAK for Loops</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
