--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -32,6 +32,7 @@
         <p>Day 22 - [Learned] JavaScript Number Methods</p>
         <p>Day 23 - [Learned] JavaScript Array Sorting and Iteration</p>
         <p>Day 24 - [Learned] JavaScript BREAK for Loops</p>
+        <p>Day 25 - [Learned] JavaScript Type Conversions</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
