--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -33,6 +33,7 @@
         <p>Day 23 - [Learned] JavaScript Array Sorting and Iteration</p>
         <p>Day 24 - [Learned] JavaScript BREAK for Loops</p>
         <p>Day 25 - [Learned] JavaScript Type Conversions</p>
+        <p>Day 26 - [Learned] JavaScript "Classes"</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
