--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -34,6 +34,7 @@
         <p>Day 24 - [Learned] JavaScript BREAK for Loops</p>
         <p>Day 25 - [Learned] JavaScript Type Conversions</p>
         <p>Day 26 - [Learned] JavaScript "Classes"</p>
+        <p>Day 27 - Completed JavaScript course. Moving forward to ReactJS</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
