--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -35,6 +35,7 @@
         <p>Day 25 - [Learned] JavaScript Type Conversions</p>
         <p>Day 26 - [Learned] JavaScript "Classes"</p>
         <p>Day 27 - Completed JavaScript course. Moving forward to ReactJS</p>
+            <p>Day 28 - Started ReactJS course</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
