--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -37,6 +37,7 @@
         <p>Day 27 - Completed JavaScript course. Moving forward to ReactJS</p>
             <p>Day 28 - Started ReactJS course</p>
         <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639"><p>Day 29 - SmortBot for Discord (New Features)</p></a>
+            <p>Day 30 - [Learned] ReactJS Exports</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
