--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -39,6 +39,7 @@
         <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639"><p>Day 29 - SmortBot for Discord (New Features)</p></a>
             <p>Day 30 - [Learned] ReactJS Exports</p>
             <p>Day 31 - [Learned] ReactJS useState</p>
+                        <p>Day 32 - [Learned] CSS grids</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
