--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -41,6 +41,7 @@
             <p>Day 31 - [Learned] ReactJS useState</p>
                         <p>Day 32 - [Learned] CSS grids</p>
             <p>Day 33 - Started "7 up/down"</p>
+            <p>Day 34 - [Work in Progress] "7 up/down"</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
