--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -43,6 +43,7 @@
             <p>Day 33 - Started "7 up/down"</p>
             <p>Day 34 - [Work in Progress] "7 up/down"</p>
                         <p>Day 35 - [Learned] ReactJS ES6 changes</p>
+            <p>Day 36 - [Work in Progress] "7 up/down"</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
