--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -35,16 +35,17 @@
         <p>Day 25 - [Learned] JavaScript Type Conversions</p>
         <p>Day 26 - [Learned] JavaScript "Classes"</p>
         <p>Day 27 - Completed JavaScript course. Moving forward to ReactJS</p>
-            <p>Day 28 - Started ReactJS course</p>
+        <p>Day 28 - Started ReactJS course</p>
         <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639"><p>Day 29 - SmortBot for Discord (New Features)</p></a>
-            <p>Day 30 - [Learned] ReactJS Exports</p>
-            <p>Day 31 - [Learned] ReactJS useState</p>
-                        <p>Day 32 - [Learned] CSS grids</p>
-            <p>Day 33 - Started "7 up/down"</p>
-            <p>Day 34 - [Work in Progress] "7 up/down"</p>
-                        <p>Day 35 - [Learned] ReactJS ES6 changes</p>
-            <p>Day 36 - [Work in Progress] "7 up/down"</p>
-            <p>Day 37 - Drummer (Website) [Started]
+        <p>Day 30 - [Learned] ReactJS Exports</p>
+        <p>Day 31 - [Learned] ReactJS useState</p>
+        <p>Day 32 - [Learned] CSS grids</p>
+        <p>Day 33 - Started "7 up/down"</p>
+        <p>Day 34 - [Work in Progress] "7 up/down"</p>
+        <p>Day 35 - [Learned] ReactJS ES6 changes</p>
+        <p>Day 36 - [Work in Progress] "7 up/down"</p>
+        <p>Day 37 - Drummer (Website) [Started]
+        <a href="https://kunalbagaria.com/drummer"><p>Day 38 - Drummer (Completed)</p></a>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
