--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -46,6 +46,7 @@
         <p>Day 36 - [Work in Progress] "7 up/down"</p>
         <p>Day 37 - Drummer (Website) [Started]
         <a href="https://kunalbagaria.com/drummer"><p>Day 38 - Drummer (Completed)</p></a>
+        <p>Day 38 - [Work in Progress] "7 up/down"</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
