--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -44,9 +44,9 @@
         <p>Day 34 - [Work in Progress] "7 up/down"</p>
         <p>Day 35 - [Learned] ReactJS ES6 changes</p>
         <p>Day 36 - [Work in Progress] "7 up/down"</p>
-        <p>Day 37 - Drummer (Website) [Started]
+        <p>Day 37 - Drummer (Website) [Started]</p>
         <a href="https://kunalbagaria.com/drummer"><p>Day 38 - Drummer (Completed)</p></a>
-        <p>Day 38 - [Work in Progress] "7 up/down"</p>
+        <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639"><p>Day 39 - SmortBot for Discord (New Features)</p></a>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
