--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -47,6 +47,7 @@
         <p>Day 37 - Drummer (Website) [Started]</p>
         <a href="https://kunalbagaria.com/drummer"><p>Day 38 - Drummer (Completed)</p></a>
         <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639"><p>Day 39 - SmortBot for Discord (New Features)</p></a>
+        <p>Day 40 - [Learned] CSS Tricks</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
