--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -49,6 +49,7 @@
         <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639"><p>Day 39 - SmortBot for Discord (New Features)</p></a>
         <p>Day 40 - [Learned] CSS Tricks</p>
         <p>Day 41 - [Released] YouTube Downloader v1.3.0</p>
+        <p>Day 42 - [Started] Jumpscare</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
