--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -50,6 +50,8 @@
         <p>Day 40 - [Learned] CSS Tricks</p>
         <p>Day 41 - [Released] YouTube Downloader v1.3.0</p>
         <p>Day 42 - [Started] Jumpscare</p>
+        <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639"><p>Day 43 - Jumpscare for SmortBot (Completed)</p></a>
+        <p>Day 44 - Cookie [Work in progress]</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
