--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -52,6 +52,7 @@
         <p>Day 42 - [Started] Jumpscare</p>
         <a href="https://discordapp.com/oauth2/authorize?&client_id=780098998044065822&scope=bot&permissions=2147483639"><p>Day 43 - Jumpscare for SmortBot (Completed)</p></a>
         <p>Day 44 - Cookie [Work in progress]</p>
+        <p>Day 45 - Cookie [Work in progress]</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
