--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -56,7 +56,18 @@
         <p>Day 46 - Cookie [Work in progress]</p>
         <p>Day 47 - Cookie [Work in progress]</p>
         <p>Day 48 - Cookie [Work in progress]</p>
-
+        <p>Day 49 - Cookie [Work in progress]</p>
+        <p>Day 50 - Cookie [Work in progress]</p>
+        <p>Day 51 - Cookie [Work in progress]</p>
+        <p>Day 52 - Cookie [Work in progress]</p>
+        <p>Day 53 - Cookie [Work in progress]</p>
+        <p>Day 54 - Cookie [Work in progress]</p>
+        <p>Day 55 - Cookie [Work in progress]</p>
+        <p>Day 56 - Cookie [Work in progress]</p>
+        <p>Day 57 - Cookie [Work in progress]</p>
+        <p>Day 58 - Cookie [Work in progress]</p>
+        <p>Day 59 - Cookie [Work in progress]</p>
+        <p>Day 60 - Cookie [Work in progress]</p>
         </div>
     </body>
     <a href="../index.html"><p class="back">< Back</p></a>
