--- a/index.html
+++ b/index.html
@@ -1,65 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <title>Kunal Bagaria</title>
-  <meta content="A Developer and Designer, working on Electron apps" name="description">
-  <meta content="YouTube Downloder, Kunal Bagaria, Github, Laughnow, Joke Generator" name="keywords">
-
-  <!-- Favicons -->
-  <link href="assets/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
-  <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,500,500i,600,600i,700,700i,900,900i"
-    rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/hover/hover.min.css" rel="stylesheet">
-  <link href="assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
-</head>
-
-<body>
-  <!-- ======= Hero Section ======= -->
-  <div id="hero" class="home">
-
-    <div class="container">
-      <div class="hero-content">
-        <h1>I'm <span class="typed"></span></h1>
-        <p class="typed-items" data-typed-person="Kunal Bagaria">A Developer and Designer, working on Electron apps</p>
-        <p style="color: white;">My work: <a href="https://github.com/promedial/YouTube-Downloader#readme"
-            target="_blank">8K YouTube Downloader</a>, <a href="https://laughnow.in" target="_blank">Laughnow</a>, <a
-            href="jokegen/index.html" target="_blank">Programmer's Jokes</a>, <a href="db" target="_blank">deskBook</a>,
-          <a href="space" target="_blank">Space News</a>
-        </p>
-        <ul class="list-unstyled list-social">
-          <li><a href="https://twitter.com/kb24x7" target="_blank"><i class="ion-social-twitter"></i></a></li>
-          <li><a href="https://github.com/ProMedial" target="_blank"><i class="ion-social-github"></i></a></li>
-          <li><a href="mailto:info@kunalbagaria.com" target="_blank"><i class="ion-email"></i></a></li>
-          <li><a href="imessage://kb24x7@gmail.com" target="_blank"><i class="ion-social-apple"></i></a></li>
-        </ul>
-        <p style="margin-top: 30px;"><a href="100daysofcode/index.html">#100DaysOfCode</a></p>
-      </div>
-    </div>
-  </div><!-- End Hero -->
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <script src="assets/vendor/typed/typed.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
-
-</body>
-
+<html>
+    <head>
+        <title>Kunal Bagaria - Loading</title>
+        <link rel="stylesheet" href="assets/css/loading.css">
+        <link href="assets/favicon.png" rel="icon">
+    </head>
+    <body>
+        <div class="container">
+            <span>L</span>
+            <span>O</span>
+            <span>A</span>
+            <span>D</span>
+            <span>I</span>
+            <span>N</span>
+            <span>G</span>
+          </div>
+    </body>
+    <script>setTimeout("location.href = './home'", 4000)</script>
 </html>
