--- a/100daysofcode/day2/index.html
+++ b/100daysofcode/day2/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Hi, I'm a doggo!</h1>
         <img src="" id="image">
-        <a href="../index.html"><p class="back">< Back</p></a>
+        <a href="../home.html"><p class="back">< Back</p></a>
         <a href="index.html"><p class="back">Refresh</p></a>
         <script src="random.js"></script>
     </body>
