--- a/100daysofcode/day3/index.html
+++ b/100daysofcode/day3/index.html
@@ -10,7 +10,7 @@
         <h1>How techy are you?</h1>
         <p style="color: black">This image does nothing</p>
         <img src="original.jpg" width="30%">
-        <a href="../index.html"><p class="back">< Back</p></a>
+        <a href="../home.html"><p class="back">< Back</p></a>
         <p style="color: black;">Psst...Have you looked everywhere?</p>
         <!-- Activate me !!!  -->
         <!-- <button onclick="thisHappens()" id="clickme">Click me!</button> -->
