--- a/100daysofcode/index.html
+++ b/100daysofcode/index.html
@@ -70,5 +70,5 @@
         <p>Day 60 - Cookie [Work in progress]</p>
         </div>
     </body>
-    <a href="../index.html"><p class="back">< Back</p></a>
+    <a href="../home.html"><p class="back">< Back</p></a>
 </html>
