--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
         </p>
         <ul class="list-unstyled list-social">
           <li><a href="https://twitter.com/kb24x7" target="_blank"><i class="ion-social-twitter"></i></a></li>
-          <li><a href="https://github.com/ProMedial" target="_blank"><i class="ion-social-github"></i></a></li>
+          <li><a href="https://github.com/kb24x7" target="_blank"><i class="ion-social-github"></i></a></li>
           <li><a href="mailto:info@kunalbagaria.com" target="_blank"><i class="ion-email"></i></a></li>
           <li><a href="imessage://kb24x7@gmail.com" target="_blank"><i class="ion-social-apple"></i></a></li>
         </ul>
