--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <div class="err">4</div>
     <i class="far fa-question-circle fa-spin"></i>
     <div class="err2">4</div>
-    <div class="msg">Maybe this page moved? Got deleted? Is hiding out in quarantine? Never existed in the first place?<p>Let's go <a href="home.html">home</a> and try from there.</p></div>
+    <div class="msg">Maybe this page moved? Got deleted? Is hiding out in quarantine? Never existed in the first place?<p>Let's go <a href="https://kunalbagaria.com/home">home</a> and try from there.</p></div>
       </div>
   <style>
     
