--- a/100daysofcode/day1/index.html
+++ b/100daysofcode/day1/index.html
@@ -16,7 +16,7 @@
             <p id="damage"></p>
             <p id="perperson"></p>
         </div>
-        <a href="../home.html"><p class="back">< Back</p></a>
+        <a href="https://kunalbagaria.com/home"><p class="back">< Back</p></a>
         <script src="main.js"></script>
     </body>
 </html>
