--- a/100daysofcode/day11/index.html
+++ b/100daysofcode/day11/index.html
@@ -31,7 +31,7 @@
             </div>
         </div>
     </div>
-    <a href="../home.html">
+    <a href="https://kunalbagaria.com/home">
         <p class="back">
             < Back</p> </a> <script src="script.js?2">
                 </script>
