--- a/100daysofcode/day6/index.html
+++ b/100daysofcode/day6/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Hi, From Mars!</h1>
         <img src="" id="image">
-        <a href="../home.html"><p class="back">< Back</p></a>
+        <a href="https://kunalbagaria.com/home"><p class="back">< Back</p></a>
         <a href="index.html"><p class="back">Refresh</p></a>
         <script src="main.js"></script>
     </body>
